DMP-1903 - Fix logic around calculation a deletion date (#871)