@@ -3,9 +3,9 @@ package uk.gov.hmcts.darts.common.service.bankholidays;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -13,9 +13,16 @@ public class BankHolidaysService {
 
     private final BankHolidaysApi bankHolidaysApi;
 
-    public List<Event> getBankHolidaysFor(int year) {
+    public List<Event> getBankHolidays(int year) {
         return bankHolidaysApi.retrieveAll().englandAndWales.events.stream()
-            .filter(eve -> eve.getDate().getYear() == year)
-            .collect(toList());
+            .filter(eve -> eve.getDate().getYear() == year).toList();
+    }
+
+    public List<Event> getBankHolidays() {
+        return new ArrayList<>(bankHolidaysApi.retrieveAll().englandAndWales.events);
+    }
+
+    public List<LocalDate> getBankHolidaysLocalDateList() {
+        return getBankHolidays().stream().map(Event::getDate).toList();
     }
 }
